--- a/style.css
+++ b/style.css
@@ -31,7 +31,8 @@ h1{
     color: orange;
 }
 .orange:hover{
-    color:black;
+    color:white;
+    text-shadow: 5px 2px 10px black;
 }
 .p-style{
     color: #646464;
@@ -55,6 +56,7 @@ h1{
 .button:hover{
     color:rgb(255, 186, 59);
     background-image: linear-gradient(to left, rgb(131, 0, 0),black );
+    box-shadow:10px 10px 30px red ;
 }
 .bottom-section h1{
     text-align: center;
@@ -91,11 +93,13 @@ footer p{
     text-align: center;
 }
 .hover-effect-1:hover{
-    background-image: linear-gradient(to right, #420000,black);
+    background-image: linear-gradient(to right, #580000,black);
     color: orange;
+    box-shadow: 10px 10px 40px red ;
 }
 .hover-effect-2:hover{
-    background-image: linear-gradient(to right,rgb(0, 0, 122),black);
+    background-image: linear-gradient(to right,#00007a,black);
     color: orange;
+    box-shadow: 10px 10px 40px #00007a;
 }
 
