--- a/style.css
+++ b/style.css
@@ -2,29 +2,41 @@ body{
     margin: 0;
     font-family: 'Ubuntu', sans-serif;
 }
+div{
+    display: block;
+}
+section{
+    display: block;
+}
 .top-section{
     display: flex;
     background-image: url(image/top-banner.png);
     background-repeat: no-repeat;
+    margin-bottom: 100px;
 }
 .middle-section{
     display: flex;
     background-image: url(image/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+    margin-bottom: 100px;
+}
+.mid-1{
+    padding-right: 30px;
 }
 .bottom-section{
     background-image: url(image/exp-bg.png);
     background-repeat: no-repeat;
     background-position: left;
+    margin-bottom: 100px;
 }
 .half-width{
     width: 50%;
-    padding-left: 10%;
-    padding-right: 5%;
-    margin-bottom: 150px;
-    
-    }
+    padding-left: 30px;
+}
+.top-padding{
+    margin-top: 30px;
+}
 h1{
     font-size: 50px;
 }
@@ -33,26 +45,37 @@ h1{
 }
 .orange:hover{
     color:white;
-    text-shadow: 5px 2px 10px black;
+    text-shadow: 5px 2px 10px #b40000;
 }
 .p-style{
+    padding: 10px;
+    box-shadow: 20px 30px 40px rgb(202, 202, 202);
+    border-radius: 15px;
     color: #646464;
     text-align: justify;
+    max-width: 100%
+}
+.p-style:hover{
+    box-shadow: 20px 40px 50px #fc3200a2;
+    color: #fc3200ea;
 }
 .h3-style{
     font-size: 20px;
 }
 .half-width img{
-    width: 90%;
+    width: 80%;
+    padding-top: 55px;
+    padding-left: 50px;
+
 }
 .button{
-    background-image: linear-gradient(to right,rgba(255, 101, 122, 0.829),#fc3200be);
+    background-image: linear-gradient(to right,#ff657ad3,#fc3200be);
     padding: 10px 40px;
-    border-radius: 7px;
+    border-radius: 20px;
     text-decoration: none;
     color: white;
     display: inline-block;
-    margin-top: 5px;
+    margin-top: 50px;
 }
 .button:hover{
     color:rgb(255, 186, 59);
@@ -70,12 +93,12 @@ h1{
 .table-1{
     
     box-shadow: 10px 10px 40px gray;
-    width: 40%;
+    max-width: 40%;
     margin-left: 5%;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-bottom:100px ;
-    margin-bottom: 100px;
+    margin-right: 5%;
+    padding: 2px 10px;
+    margin-bottom: 50px;
+    
 }
 #full-stack{
     border-left: 10px solid;
@@ -89,9 +112,13 @@ h1{
     border-image: linear-gradient(blue, #00eeff);
     border-image-slice: 8;
 }
-footer p{
-    color: rgb(94, 94, 94);
+footer {
     text-align: center;
+    display: block;
+    background-color: orange;
+    color: white;
+    padding: 5px 0px 5px 0px;
+    margin-bottom: 10px;
 }
 .hover-effect-1:hover{
     background-image: linear-gradient(to right, #580000,black);
@@ -105,4 +132,5 @@ footer p{
 }
 .p-style-1{
     text-align: justify;
+    margin-bottom: 30px;
 }
